--- a/04_subnavigation/app/build.gradle
+++ b/04_subnavigation/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material:material'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0'
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -62,6 +63,9 @@ dependencies {
     implementation "com.github.moxy-community:moxy-ktx:$moxyVersion"
 
     implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0"
+
 
     implementation('com.ashokvarma.android:bottom-navigation-bar:1.3.0') {
         exclude group: "com.android.support", module: "design"
